<resources>
    <string name="app_name">MEDIARM</string>
    <string name="tab_text_1">Tecnicas</string>
    <string name="tab_text_2">Modelos RA</string>
    <string name="tab_text_3">Informacion</string>
    <string name="RCP">La reanimación cardiopulmonar (RCP)
        es una técnica para salvar vidas que es útil en muchas
        emergencias, como por ejemplo, un ataque cardíaco o un cuasi ahogamiento,
        en los que la respiración o los latidos del corazón de una persona se han detenido. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registro">Registro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="numero">Numero</string>
    <string name="registro">Registro</string>
    <string name="registrar">Registrar</string>
    <string name="login">Login</string>
    <string name="registrate">Registrate</string>
    <string name="tecnicas_y_metodos">Tecnicas y Metodos</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="administrador">Administrador</string>
    <string name="update">Update</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="subir_imagen">Subir Imagen</string>
    <string name="medicina_basica">Medicina Basica</string>
    <string name="agregar">Agregar</string>
    <string name="vista">Vista</string>
    <string name="nombre_del_concepto">Nombre del Concepto</string>
    <string name="vista_de_pelicula">Vista de Pelicula</string>
    <string name="descripcion">Descripcion</string>
    <string name="vista_de_Imagen">Vista de Imagen</string>
    <string name="descripcion_de_la_imagen">Descripcion de la imagen</string>
    <string name="publicar_concepto">Publicar Concepto</string>
    <string name="nombre_Concepto">---</string>
    <string name="descripcion_Concepto">---</string>
    <string name="nombre_Categoria">--</string>
    <string name="conceptos">Conceptos</string>
    <string name="ingresar">Ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="regresar">Regresar</string>
</resources>