<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51219E9E"
    tools:context=".MainActivityAdmi">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:paddingTop="20dp"
            android:id="@+id/R1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/administrador"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/textView2"
                android:layout_centerVertical="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/admi_med1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView3"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_rounded"
                android:gravity="center"
                android:text="@string/cerrar_sesion"
                tools:ignore="MissingConstraints" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/R2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/R1"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btnSubirImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_rounded"
                android:text="@string/subir_imagen" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/btnSubirImg"
                android:layout_centerVertical="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/icn_med" />



        </RelativeLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSingle"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />


</androidx.constraintlayout.widget.ConstraintLayout>